--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,8 +3,11 @@
     %h2 categories:
     =nested_list(@group.categories.roots) do |cat|
         = cat.name
+        = link_to 'edit', edit_category_path(cat)
 
 = link_to 'Manage Categories', reorder_categories_path(:group_id=>@group.id)
+\|
+= link_to 'New Category', new_category_path(:group_id => @group.id)
 \|
 = link_to 'Edit', edit_group_path(@group)
 \|
