--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html
   %head
-    %title Orly
+    %title Awesome Nested Sortable
     = csrf_meta_tag
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
